GNOME Bugzilla – Bug 719821
Cannot import bookmarks from file
Last modified: 2013-12-23 04:09:17 UTC
When attempting to import bookmarks, choosing "File" from the dropdown and clicking "Import" does nothing. No file chooser appears.
A mistake in the stock items migration :/
This one probably warrants another 3.10.x release soonish.
Also applied to 3.10; IMO this is probably worth another release soonish The following fix has been pushed: 090c427 Fix bookmark importing
Created attachment 264790 [details] [review] Fix bookmark importing Bookmark importing was broken due to a typo during the stock item removal.