Fix bookmark importing

Bookmark importing was broken due to a typo during the stock item
removal.

https://bugzilla.gnome.org/show_bug.cgi?id=719821